# lumen

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml  setup.iss
.github/: FUNDING.yml  release.yml
.github/workflows/: release.yml
compositor/: Cargo.toml
compositor/src/: capture.rs  compositor.rs  gpu.rs  lib.rs  utils.rs
compositor/src/motion/: driver.rs  island.rs  mod.rs  spring.rs  value.rs
core/: Cargo.toml
core/src/: bus.rs  core.rs  events.rs  lib.rs  runtime.rs
core/src/services/: audio.rs  camera.rs  media.rs  microphone.rs  mod.rs  notifications.rs
core/src/utils/: artwork.rs  icon.rs  mod.rs  name.rs
ui/: Cargo.toml  build.rs
ui/src/: app.rs  geometry.rs  main.rs  settings.rs  state.rs  sync.rs
ui/src/platform/: clickthrough.rs  cursor.rs  fullscreen.rs  mod.rs  toast.rs  tray.rs  updater.rs  window.rs
ui/ui/: Island.slint  Shell.slint  global.slint
ui/ui/components/: ElidedText.slint  MediaControls.slint  SpectrumBars.slint  Timeline.slint  index.slint
ui/ui/layouts/: Idle.slint  Media.slint  Notification.slint
ui/ui/theme/: Colors.slint
