[workspace]
members = [
    "core",
    "ui"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
authors = ["Risuleia"]
edition = "2024"
license = "MIT"
repository = "https://github.com/Risuleia/Lumen"
homepage = "https://github.com/Risuleia/Lumen"
description = "Dynamic Island for Windows"
keywords = ["windows", "dynamic-island", "taskbar", "media", "notifications"]
categories = ["gui"]
readme = "README.md"