[package]
name = "lumen-core"
description = "Core library for Lumen"
authors = ["Risuleia"]
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "full"] }
windows = { version = "0.62.2", features = [
    "Foundation",
    "Foundation_Collections",
    "UI_Notifications",
    "UI_Notifications_Management",
    "Data_Xml_Dom",
    "Management_Deployment",
    "ApplicationModel",
    "Storage",
    "Storage_Streams",
    "Media",
    "Media_Control",
    "Media_Playback",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com_StructuredStorage", 
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Storage_EnhancedStorage",
    "Win32_Graphics_Gdi"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1.0.100"
windows-core = "0.62.2"
crossbeam-channel = "0.5.15"
rustfft = "6.4.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
async-trait = "0.1.89"
winreg = "0.56.0"
sha2 = "0.11.0"
sysinfo = "0.38.4"
image = "0.25.10"
quick-xml = "0.40.1"
glob = "0.3.3"
dirs = "6.0.0"
windows-future = "0.3.2"
