[package]
name = "lumen"
version = "0.1.0"
description = "Minimal Dynamic Island for Windows"
authors = ["Risuleia"]
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
i-slint-backend-winit = "1.14.1"
lumen-core = { path = "../core" }
raw-window-handle = "0.6.2"
single-instance = "0.3.3"
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-femtovg", "renderer-software"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
] }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }

[build-dependencies]
slint-build = "1.14.1"
