[package]
name = "lumen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme.workspace = true
build = "build.rs"

[[bin]]
name = "Lumen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
i-slint-backend-winit = { version = "1.14.1", features = ["renderer-skia"] }
lumen-core = { path = "../core" }
single-instance = "0.3.3"
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "std", "backend-winit", "renderer-skia"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Data_Xml_Dom",
    "UI_Notifications",
] }
futures = "0.3.31"
tray-icon = "0.24.1"
image = { version = "0.25.10", default-features = false, features = ["ico"] }
windows-core = "0.62.2"
self_update = { version = "0.44.0", features = ["archive-zip", "compression-zip-deflate"] }

[build-dependencies]
slint-build = "1.14.1"
winres = "0.1"
